--- a/web/home/static/home/css/home.css
+++ b/web/home/static/home/css/home.css
@@ -1,37 +1,24 @@
-input[type=text] {
-  width: 400px;
-	border-radius: 6px;
-	height: 50px;
-	border: 0;
-	padding: 0 0 0 16px;
-	font-size: 18;
-	background: #1566BB;
-	transition: background .3s ease;
-	color: #ffffff;
+.appraisals_current {
+  margin-bottom: 1em;
 }
 
-input[type=submit] {
-  width: 200px;
-	border-radius: 6px;
-	height: 50px;
-	border: 0;
-	padding: 0;
-	font-size: 18;
-	background: #ff6633;
-	transition: background .3s ease;
-	color: #ffffff;
+.appraisal {
+  border: 1px solid #eee;
+  padding: 1em;
+  background: #fafafa;
+  margin-bottom: 0.2em;
 }
 
-*:focus {
-    outline: none !important;
-    border: 3px solid #aaaaff;
-    box-shadow: 0 0 0px #719ECE;
+.appraisal:hover {
+  background: #f2f2f2;
 }
 
-*:focus::placeholder { opacity: 0; } /* Modern Browsers */
+.appraisal_date {
+  font-size: 10px;
+  margin-top: 0.5em;
+}
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #ffffff;
-    opacity: 0.8; /* Firefox */
-    transition: opacity .0s; /* Modern Browsers */
+.appraisal_address p {
+  margin: 0px;
+  margin-bottom: 0.2em;
 }
