--- a/web/search/templates/search/index.html
+++ b/web/search/templates/search/index.html
@@ -1,39 +1,98 @@
+{% extends "home/base.html" %}
 {% load static %}
-<html>
-    <head>
-        <link rel="stylesheet" href="{% static 'search/css/search.css' %}">
-        {% load static %}
-        {{form_search.media}}
-        <!--
-        Here we should import all data from django
-        -->
-        {{ buildings_json|json_script:"buildings-data" }}
-        <!--
-        Load external libraries
-        -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="https://maps.google.com/maps/api/js?key=AIzaSyDgwKrK7tfcd9kCtS9RKSBsM5wYkTuuc7E&libraries=places"></script>
-        <!--
-        Load own scripts
-        -->
-        <script src="{% static 'search/js/google-maps-admin.js' %}"></script>
-        <script src="{% static 'search/js/google-maps-autocomplete.js' %}"></script>
-    </head>
+{% block head %}
+  <link rel="stylesheet" href="{% static 'search/css/search.css' %}">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  {% load static %}
+  {{form_search.media}}
+  <!--
+  Here we should import all data from django
+  -->
+  {{ buildings_json|json_script:"buildings-data" }}
+  <!--
+  Load external libraries
+  -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyDgwKrK7tfcd9kCtS9RKSBsM5wYkTuuc7E&libraries=places"></script>
+  <!--
+  Load own scripts
+  -->
+  <script src="{% static 'search/js/google-maps-admin.js' %}"></script>
+  <script src="{% static 'search/js/google-maps-autocomplete.js' %}"></script>
+{% endblock head %}
 
-    <form action="/create/" method="post">
+{% block content %}
+  <div id="search">
+    <form action="" method="post">
       {{form_search}}
       <input type="submit" value="Buscar">
-      <input type="submit" value="Crear">
     </form>
 
-    <div class="map_canvas_wrapper"><div id="map_canvas"></div></div>
+    <div class="map_canvas_wrapper">
+      <div id="map_canvas">
+      </div>
+    </div>
+  </div>
 
-    <h2> Propiedades </h2>
+  <div id="new_appraisal">
+    <h2>Nueva tasación</h2>
+    <form action="/search/" method="post" id="form_create" data-commune-url="{% url 'ajax_load_communes' %}">
+      {% csrf_token %}
+      <!--{{form_create}}-->
+      <section>
+        <div style="float:left;">
+          {{form_create.addressRegion_create.label_tag}}
+          {{form_create.addressRegion_create}}
+        </div>
+        <div style="float:left;">
+          {{form_create.addressCommune_create.label_tag}}
+          {{form_create.addressCommune_create}}
+        </div>
+        <div style="float:left;">
+          {{form_create.addressStreet_create.label_tag}}
+          {{form_create.addressStreet_create}}
+        </div>
+        <div style="float:left;">
+          {{form_create.addressNumber_create.label_tag}}
+          {{form_create.addressNumber_create}}
+        </div>
+        <div style="float:left;">
+          {{form_create.addressNumberFlat_create.label_tag}}
+          {{form_create.addressNumberFlat_create}}
+        </div>
+      </section>
+      <input type="submit" value="Nueva tasación">
+    </form>
+  </div>
 
-    <ul>
-      {% for building in buildings %}
-      <li>{{ building.addressStreet }} {{ building.addressNumber }}</li>
-      {% endfor %}
-    <ul>
+  <script>
+      $("#id_addressRegion_create").change(function () {
+        var url = $("#form_create").attr("data-commune-url");  // get the url of the `load_cities` view
+        var regionId = $(this).val();  // get the selected country ID from the HTML input
 
-</html>
+        $.ajax({                       // initialize an AJAX request
+          url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+          data: {
+            'region': regionId       // add the country id to the GET parameters
+          },
+          success: function (data) {   // `data` is the return of the `load_cities` view function
+            $("#id_addressCommune_create").html(data);  // replace the contents of the city input with the data that came from the server
+          }
+        });
+
+      });
+    </script>
+
+  <!--
+  <h2> Propiedades </h2>
+  <ul>
+    {% for building in buildings %}
+    <li>
+      <a href='/property/{{building.addressRegion|slugify}}/{{building.addressCommune|slugify}}/{{building.addressStreet|slugify}}/{{building.addressNumber}}/edificio/{{building.id}}'>
+      {{ building.addressStreet }} {{ building.addressNumber }}
+      </a>
+    </li>
+    {% endfor %}
+  <ul>
+  -->
+{% endblock %}
