--- a/web/search/templates/search/index.html
+++ b/web/search/templates/search/index.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% extends "main/base.html" %}
 {% load static %}
 {% block head %}
   <link rel="stylesheet" href="{% static 'search/css/search.css' %}">
