--- a/web/appraisal/templates/appraisal/apartment.html
+++ b/web/appraisal/templates/appraisal/apartment.html
@@ -1,14 +1,8 @@
-{% extends "home/base.html" %}
+{% extends "main/base.html" %}
 {% load static %}
 
 {% block head %}
   {% load static %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <!--<script src="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js" type="text/javascript"></script>-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.standalone.css">
   <link rel="stylesheet" href="{% static 'appraisal/css/appraisal.css' %}">
 {% endblock head %}
 
@@ -17,6 +11,21 @@
 
 <form action="" method="post" id="form" ajax_computeValuationsUrl="{% url 'ajax_computeValuations' %}">
   {% csrf_token %}
+
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Tasación</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" onclick="form.submit();" name="save" href="#">Guardar</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Exportar</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+  </ul>
 
   <div id="menu" class="section">
     <button class="btn btn-outline-primary" name="save">Guardar</button>
@@ -63,18 +72,19 @@
   </div>
 
   <section>
-  <div id="surroundings" class="section">
+  <div class="container-fluid border">
+  <!--<div id="surroundings" class="section">-->
 
     <div class="section-title">
       <h2> Tasación </h2>
     </div>
 
-    <div class="subsection">
+    <div class="container-fluid border">
 
       <label>Solicitante</label>
 
       <div class="form-row">
-        <div class="col-4">
+        <div class="col-md-4">
         <div class="input-group input-group-sm">
         <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">
@@ -85,7 +95,7 @@
         </div>
         </div>
 
-        <div class="col-4">
+        <div class="col-md-4">
         <div class="input-group input-group-sm">
         <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">
@@ -96,7 +106,7 @@
         </div>
         </div>
 
-        <div class="col-4">
+        <div class="col-md-4">
         <div class="input-group input-group-sm">
         <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">
