--- a/web/home/templates/home/index.html
+++ b/web/home/templates/home/index.html
@@ -1,64 +1,15 @@
-{% extends "home/base.html" %}
+{% extends "main/base.html" %}
 {% load static %}
 {% block head %}
-        <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
-        {% load static %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="https://maps.google.com/maps/api/js?key=AIzaSyDgwKrK7tfcd9kCtS9RKSBsM5wYkTuuc7E&libraries=places"></script>
-        <script src="{% static 'home/js/google-maps-autocomplete.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
 {% endblock %}
 
 {% block content %}
-<!--
-<div class="subsection">
-  <h3>Buscar propiedad</h3>
-  <form action="/search/" method="get">
-    <div class="row">
-    <div class="col-8">
-    <div class="input-group mb-3">
-      {% csrf_token %}
-      {{ form }}
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary">Buscar</button>
-      </div>
-    </div>
-    </div>
-    </div>
-  </form>
-</div>
--->
-<div class="section">
-  <form action="search">
-    <button class="btn btn-primary">Crear nueva tasación</button>
-  </form>
-</div>
 
 <div class="section">
-  <h2>Tasaciones activas</h2>
-    <div class="appraisals_current">
-    {% for appraisal in appraisals %}
-    <div class="appraisal">
-      <div class="appraisal_address">
-        <p>
-        <a href='/appraisal/{{appraisal.apartment.building.addressRegion|slugify}}/{{appraisal.apartment.building.addressCommune|slugify}}/{{appraisal.apartment.building.addressStreet|slugify}}/{{appraisal.apartment.building.addressNumber}}/{{appraisal.apartment.building.id}}/departamento/{{appraisal.apartment.number}}/{{appraisal.apartment.id}}/{{appraisal.id}}/'>
-        {{ appraisal.apartment.building.addressStreet }}
-        {{ appraisal.apartment.building.addressNumber }},
-        Depto. {{ appraisal.apartment.number }},
-        {{ appraisal.apartment.building.addressCommune }},
-        {{ appraisal.apartment.building.addressRegion }}
-        </a>
-      </div>
-      <div class="appraisal_date">
-        Creado: {{ appraisal.timeCreated | date:"m/d, H:i" }} |
-        Modificado: {{ appraisal.timeModified | date:"m/d, H:i"}}
-      </div>
-    </div>
-    {% endfor %}
+  <div class="section-title">
+    <h2>Welcome</h2>
   </div>
-</div>
-
-<div class="section">
-  <h2>Tasaciones previas</h2>
 </div>
 
 {% endblock %}
