--- a/web/appraisal/templates/appraisal/apartment.html
+++ b/web/appraisal/templates/appraisal/apartment.html
@@ -16,7 +16,7 @@
     <nav class="navbar justify-content-between">
       <a class="navbar-brand" href="#">Tasación departamento</a>
       <span class="navbar-text">
-        Hola
+        {{ building.address }}
       </span>
       <ul class="navbar-nav mr-auto">
       </ul>
@@ -50,6 +50,11 @@
               Valorización
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" id="value-tab" data-toggle="tab" href="#logbook" role="tab" aria-controls="value" aria-selected="false">
+              Bitacora
+            </a>
+          </li>
         </ul>
 
       </div>
@@ -67,6 +72,9 @@
       </div>
       <div class="tab-pane fade" id="value" role="tabpanel" aria-labelledby="value-tab">
         {% include "appraisal/apartment_value.html" %}
+      </div>
+      <div class="tab-pane fade" id="logbook" role="tabpanel" aria-labelledby="value-tab">
+        {% include "appraisal/apartment_logbook.html" %}
       </div>
 
 
