--- a/web/appraisal/templates/appraisal/apartment_logbook.html
+++ b/web/appraisal/templates/appraisal/apartment_logbook.html
@@ -1,8 +1,52 @@
 <div class="card-body">
-  <h5>Historial de modificación</h5>
-  {% for version in versions %}
-    {% for key in version.field_dict.keys %}
-      {{ key }}
+
+  <div class="row">
+
+  <div class="col-6">
+
+  <div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Historial de modificación</h5>
+
+    {% for appraisal_time in appraisal_history %}
+    <div class="card">
+      <div class="card-header">
+        {{ appraisal_time.time | date:"D d M, H:i"}},
+        {{ appraisal_time.user.first_name }} {{ appraisal_time.user.last_name }} ({{ appraisal_time.user }})
+        {% ifequal user.groups.all.0.name "visador" %}
+          <span class="badge badge-secondary">Visador</span>
+        {% else %}
+          <span class="badge badge-secondary">Otro</span>
+        {% endifequal %}
+      </div>
+      <div class="card-body">
+        <small>
+        {% for vars in appraisal_time.diffs %}
+          <div class="row">
+            <div class="col-3">{{ vars.0 }}</div>
+            <div class="col-3">{{ vars.1 }}</div>
+          </div>
+          <div class="row">
+            <div class="col-3"></div>
+            <div class="col-3">{{ vars.2 }}</div>
+          </div>
+        {% endfor %}
+        </small>
+      </div>
+    </div>
     {% endfor %}
-  {% endfor %}
+  </div>
+  </div>
+
+  </div>
+  <div class="col-6">
+    <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Comentarios/Incidencias</h5>
+    </div>
+    </div>
+  </div>
+
+  </div>
+
 </div>
