--- a/web/appraisal/templates/appraisal/apartment.html
+++ b/web/appraisal/templates/appraisal/apartment.html
@@ -52,7 +52,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" id="value-tab" data-toggle="tab" href="#logbook" role="tab" aria-controls="value" aria-selected="false">
-              Bitacora
+              Bitácora
             </a>
           </li>
         </ul>
