--- a/web/appraisal/templates/appraisal/apartment_general.html
+++ b/web/appraisal/templates/appraisal/apartment_general.html
@@ -39,7 +39,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        <input type="text" class="form-control form-control-sm" value="{{form_appraisal.instance.visadorUser.first_name}} {{form_appraisal.instance.visadorUser.last_name}}" disabled>
+        <input type="text" class="form-control form-control-sm" value="{{form_appraisal.instance.tasadorUser.first_name}} {{form_appraisal.instance.tasadorUser.last_name}}" disabled>
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
