--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -9,8 +9,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/main/">Tasaciones <span class="sr-only">(current)</span></a>
       </li>
-      {{ perms.appraisal.can_create }}
-      {% if perms.appraisal.can_create %}
+      {% if perms.appraisal.add_appraisal %}
       <li class="nav-item">
         <a class="nav-link" href="/search/">Crear tasación</a>
       </li>
