--- a/web/search/templates/search/index.html
+++ b/web/search/templates/search/index.html
@@ -33,7 +33,7 @@
       {{form_create.propertyType_create.label_tag}}
       {{form_create.propertyType_create}}
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-1">
       {{form_create.addressRegion_create.label_tag}}
       {{form_create.addressRegion_create}}
     </div>
@@ -52,6 +52,10 @@
     <div class="form-group col-md-1" id="type">
       {{form_create.addressNumberFlat_create.label_tag}}
       {{form_create.addressNumberFlat_create}}
+    </div>
+        <div class="form-group col-md-1">
+      {{form_create.appraisalTimeFrame_create.label_tag}}
+      {{form_create.appraisalTimeFrame_create}}
     </div>
     <div class="form-group col-md-1">
       <label style="visibility:hidden;">a</label>
