Generado realestate, para dar paso a crear tasaciones de casas

--- a/web/appraisal/templates/appraisal/apartment.html
+++ b/web/appraisal/templates/appraisal/apartment.html
@@ -20,7 +20,7 @@
 
       <a class="navbar-brand" href="#">Tasación departamento</a>
       <span class="navbar-text">
-        {{ building.address }}
+        {{ realestate.address }}
       </span>
       <ul class="navbar-nav mr-auto">
       </ul>
