--- a/web/appraisal/templates/appraisal/apartment_general.html
+++ b/web/appraisal/templates/appraisal/apartment_general.html
@@ -10,7 +10,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        <input type="text" class="form-control form-control-sm" value="{{form_appraisal.instance.visadorUser.first_name}} {{form_appraisal.instance.visadorUser.last_name}}" disabled>
+        <input type="text" class="form-control form-control-sm" value="{{forms.appraisal.instance.visadorUser.first_name}} {{forms.appraisal.instance.visadorUser.last_name}}" disabled>
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
@@ -41,7 +41,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        <input type="text" class="form-control form-control-sm" value="{{form_appraisal.instance.tasadorUser.first_name}} {{form_appraisal.instance.tasadorUser.last_name}}" disabled>
+        <input type="text" class="form-control form-control-sm" value="{{forms.appraisal.instance.tasadorUser.first_name}} {{forms.appraisal.instance.tasadorUser.last_name}}" disabled>
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
@@ -72,7 +72,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-          {{form_appraisal.solicitante}}
+          {{forms.appraisal.solicitante}}
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
@@ -80,7 +80,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        {{form_appraisal.solicitanteSucursal}}
+        {{forms.appraisal.solicitanteSucursal}}
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
@@ -88,7 +88,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        {{form_appraisal.solicitanteEjecutivo}}
+        {{forms.appraisal.solicitanteEjecutivo}}
       </div>
     </span>
 
@@ -102,7 +102,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        {{form_appraisal.cliente}}
+        {{forms.appraisal.cliente}}
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
@@ -110,7 +110,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        {{form_appraisal.clienteRut}}
+        {{forms.appraisal.clienteRut}}
       </div>
     </span>
 
@@ -124,7 +124,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        {{form_appraisal.propietario}}
+        {{forms.appraisal.propietario}}
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
@@ -132,7 +132,7 @@
         </label>
       </div>
       <div class="col-lg-3">
-        {{form_appraisal.propietarioRut}}
+        {{forms.appraisal.propietarioRut}}
       </div>
     </span>
 
@@ -147,7 +147,7 @@
             </label>
           </div>
           <div class="col-lg-3">
-            {{form_appraisal.rolAvaluo}}
+            {{forms.appraisal.rolAvaluo}}
           </div>
         </div>
       </div>
