--- a/web/appraisal/templates/appraisal/apartment_property.html
+++ b/web/appraisal/templates/appraisal/apartment_property.html
@@ -60,55 +60,55 @@
 
       <div class="form-group row align-middle">
         <div class="col-auto">
-          {{form_apartment.floor.label}}
+          {{forms.apartment.floor.label}}
         </div>
         <div class="col-lg-3">
-          {{form_apartment.floor}}
+          {{forms.apartment.floor}}
         </div>
       </div>
 
       <div class="form-group row align-middle">
         <div class="col-auto">
-          {{form_apartment.bedrooms.label}}
+          {{forms.apartment.bedrooms.label}}
         </div>
         <div class="col-lg-3">
-          {{form_apartment.bedrooms}}
+          {{forms.apartment.bedrooms}}
         </div>
       </div>
 
       <div class="form-group row align-middle">
         <div class="col-auto">
-          {{form_apartment.bathrooms.label}}
+          {{forms.apartment.bathrooms.label}}
         </div>
         <div class="col-lg-3">
-          {{form_apartment.bathrooms}}
+          {{forms.apartment.bathrooms}}
         </div>
       </div>
 
       <div class="form-group row align-middle">
         <div class="col-auto">
-          {{form_apartment.builtSquareMeters.label}}
+          {{forms.apartment.builtSquareMeters.label}}
         </div>
         <div class="col-lg-3">
-          {{form_apartment.builtSquareMeters}}
+          {{forms.apartment.builtSquareMeters}}
         </div>
       </div>
 
       <div class="form-group row align-middle">
         <div class="col-auto">
-          {{form_apartment.usefulSquareMeters.label}}
+          {{forms.apartment.usefulSquareMeters.label}}
         </div>
         <div class="col-lg-3">
-          {{form_apartment.usefulSquareMeters}}
+          {{forms.apartment.usefulSquareMeters}}
         </div>
       </div>
 
       <div class="form-group row align-middle">
         <div class="col-auto">
-          {{form_apartment.orientation.label}}
+          {{forms.apartment.orientation.label}}
         </div>
         <div class="col-lg-3">
-          {{form_apartment.orientation}}
+          {{forms.apartment.orientation}}
         </div>
       </div>
 
@@ -116,8 +116,8 @@
 
     <div class="col-md-8">
 
-      {{form_apartment.generalDescription.label_tag}}
-      {{form_apartment.generalDescription}}
+      {{forms.apartment.generalDescription.label_tag}}
+      {{forms.apartment.generalDescription}}
 
     </div>
     </div>
@@ -137,82 +137,82 @@
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.anoConstruccion.label}}
+        {{forms.building.anoConstruccion.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.anoConstruccion}}
+        {{forms.building.anoConstruccion}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.vidaUtilRemanente.label}}
+        {{forms.building.vidaUtilRemanente.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.vidaUtilRemanente}}
+        {{forms.building.vidaUtilRemanente}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.avaluoFiscal.label}}
+        {{forms.building.avaluoFiscal.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.avaluoFiscal}}
+        {{forms.building.avaluoFiscal}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.dfl2.label}}
+        {{forms.building.dfl2.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.dfl2}}
+        {{forms.building.dfl2}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.selloVerde.label}}
+        {{forms.building.selloVerde.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.selloVerde}}
+        {{forms.building.selloVerde}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.copropiedadInmobiliaria.label}}
+        {{forms.building.copropiedadInmobiliaria.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.copropiedadInmobiliaria}}
+        {{forms.building.copropiedadInmobiliaria}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.ocupante.label}}
+        {{forms.building.ocupante.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.ocupante}}
+        {{forms.building.ocupante}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.tipoBien.label}}
+        {{forms.building.tipoBien.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.tipoBien}}
+        {{forms.building.tipoBien}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.destinoSII.label}}
+        {{forms.building.destinoSII.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.destinoSII}}
+        {{forms.building.destinoSII}}
       </div>
     </div>
 
@@ -221,19 +221,19 @@
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.usoActual.label}}
+        {{forms.building.usoActual.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.usoActual}}
+        {{forms.building.usoActual}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.usoFuturo.label}}
+        {{forms.building.usoFuturo.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.usoFuturo}}
+        {{forms.building.usoFuturo}}
       </div>
     </div>
 
@@ -241,10 +241,10 @@
       <div class="col-8">
         <div class="form-group row align-middle">
           <div class="col-auto">
-            {{form_building.permisoEdificacion.label}}
+            {{forms.building.permisoEdificacion.label}}
           </div>
           <div class="col-lg-3">
-            {{form_building.permisoEdificacion}}
+            {{forms.building.permisoEdificacion}}
           </div>
         </div>
       </div>
@@ -254,7 +254,7 @@
             Fecha
           </div>
           <div class="col-lg-3">
-            {{form_building.permisoEdificacionDate}}
+            {{forms.building.permisoEdificacionDate}}
           </div>
         </div>
       </div>
@@ -264,10 +264,10 @@
       <div class="col-8">
         <div class="form-group row align-middle">
           <div class="col-auto">
-            {{form_building.recepcionFinal.label}}
+            {{forms.building.recepcionFinal.label}}
           </div>
           <div class="col-lg-3">
-            {{form_building.recepcionFinal}}
+            {{forms.building.recepcionFinal}}
           </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
             Fecha
           </div>
           <div class="col-lg-3">
-            {{form_building.recepcionFinalDate}}
+            {{forms.building.recepcionFinalDate}}
           </div>
         </div>
       </div>
@@ -285,37 +285,37 @@
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.expropiacion.label}}
+        {{forms.building.expropiacion.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.expropiacion}}
+        {{forms.building.expropiacion}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.viviendaSocial.label}}
+        {{forms.building.viviendaSocial.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.viviendaSocial}}
+        {{forms.building.viviendaSocial}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.adobe.label}}
+        {{forms.building.adobe.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.adobe}}
+        {{forms.building.adobe}}
       </div>
     </div>
 
     <div class="form-group row align-middle">
       <div class="col-auto">
-        {{form_building.desmontable.label}}
+        {{forms.building.desmontable.label}}
       </div>
       <div class="col-lg-3">
-        {{form_building.desmontable}}
+        {{forms.building.desmontable}}
       </div>
     </div>
 
