--- a/web/appraisal/templates/appraisal/apartment_value.html
+++ b/web/appraisal/templates/appraisal/apartment_value.html
@@ -18,7 +18,7 @@
         <tr>
           <td scope="col" style="vertical-align: middle;">Valor comercial</td>
           <td scope="col"><input type="number" name="valor" id="id_valor" class="form-control form-control-sm" disabled></td>
-          <td scope="col">{{form_appraisal.valorUF}}</td>
+          <td scope="col">{{forms.appraisal.valorUF}}</td>
         </tr>
         <tr>
           <td scope="col" style="vertical-align: middle;">Valor liquidez</td>
