--- a/web/main/templates/main/index.html
+++ b/web/main/templates/main/index.html
@@ -47,7 +47,7 @@
           Dpto
         </td>
         <td>
-          <a class="text-dark" href={{appraisal.url}}>
+          <a class="text-dark" href="{{appraisal.url}}">
             {{ appraisal.apartment.building.address }}
           </a>
         </td>
