--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -11,7 +11,7 @@
       </li>
       {% if perms.appraisal.add_appraisal %}
       <li class="nav-item">
-        <a class="nav-link" href="/search/">Crear tasación</a>
+        <a class="nav-link" href="/create/">Crear tasación</a>
       </li>
       {% endif %}
       <li class="nav-item">
