--- a/web/appraisal/templates/appraisal/apartment.html
+++ b/web/appraisal/templates/appraisal/apartment.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar justify-content-between">
 
-      <a class="navbar-brand" href="#">Tasación departamento</a>
+      <a class="navbar-brand" href="#">Tasación {{realestate.propertyType}}</a>
       <span class="navbar-text">
         {{ realestate.address }}
       </span>
