--- a/web/main/templates/main/index.html
+++ b/web/main/templates/main/index.html
@@ -48,7 +48,7 @@
         </td>
         <td>
           <a class="text-dark" href="{{appraisal.url}}">
-            {{ appraisal.apartment.building.address }}
+            {{ appraisal.realEstate.address }}
           </a>
         </td>
         <td>
@@ -125,7 +125,7 @@
         </td>
         <td>
           <a class="text-dark" href={{appraisal.url}}>
-            {{ appraisal.apartment.building.address }}
+            {{ appraisal.realEstate.building_in.address }}
           </a>
         </td>
         <td>
