--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar justify-content-between">
 
-      <a class="navbar-brand" href="#">Tasación {{realestate.propertyType}}</a>
+      <a class="navbar-brand" href="#">Tasación {{realestate.get_propertyType_display}}</a>
       <span class="navbar-text">
         {{ realestate.address }}
       </span>
