--- a/web/appraisal/templates/appraisal/realestate_property.html
+++ b/web/appraisal/templates/appraisal/realestate_property.html
@@ -7,7 +7,7 @@
       </label>
     </div>
     <div class="col-lg-3">
-      <input type="text" class="form-control form-control-sm" value="{{ building.addressStreet }}" disabled>
+      <input type="text" class="form-control form-control-sm" value="{{realestate.addressStreet }}" disabled>
     </div>
 
     <div class="col-auto">
@@ -16,17 +16,20 @@
       </label>
     </div>
     <div class="col-lg-3">
-      <input type="text" class="form-control form-control-sm" value="{{building.addressNumber}}" disabled>
+      <input type="text" class="form-control form-control-sm" value="{{realestate.addressNumber}}" disabled>
     </div>
 
+    {% if realestate.apartment %}
     <div class="col-auto">
       <label for="" class="col-form-label-sm">
       Dpto.
       </label>
     </div>
     <div>
-      <input type="text" class="form-control form-control-sm" value="{{ apartment.number }}" disabled>
+      <input type="text" class="form-control form-control-sm" value="{{realestate.apartment.number}}" disabled>
     </div>
+    {% endif %}
+
   </div>
 
   <div class="form-group row align-middle">
@@ -36,7 +39,7 @@
       </label>
     </div>
     <div class="col-lg-3">
-      <input type="text" class="form-control form-control-sm" value="{{ building.addressCommune }}" disabled>
+      <input type="text" class="form-control form-control-sm" value="{{realestate.addressCommune}}" disabled>
     </div>
 
     <div class="col-auto">
@@ -45,7 +48,7 @@
       </label>
     </div>
     <div class="col-lg-3">
-      <input type="text" class="form-control form-control-sm" value="{{ building.addressRegion }}" disabled>
+      <input type="text" class="form-control form-control-sm" value="{{realestate.addressRegion}}" disabled>
     </div>
   </div>
 
